--- a/app/src/main/res/layout/item_example.xml
+++ b/app/src/main/res/layout/item_example.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/exampleLayout"
-    android:layout_marginHorizontal="@dimen/page_marginandoffset"
+    android:layout_marginHorizontal="@dimen/pager_offset"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
