--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="page_margin"> 20dp </dimen>
+    <dimen name="page_submargin"> 10dp </dimen>
     <dimen name="pager_offset"> 20dp </dimen>
-    <dimen name="page_marginandoffset"> 40dp </dimen>
-
 </resources>
